[tool.poetry]
name = "repl_nix_discord-bot-lua-obfuscator"
version = "0.1.0"
description = "discord-bot-lua-obfuscator for repl by jmes."
authors = ["yunglean_#4171", "jmes#1396"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
requests = "^2.27.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
